tests/snapshots/tests__sort_requires_with_glob@sort-services-2.lua-3.snap
---
source: tests/tests.rs
expression: "format!(\"glob_pattern: {}\\n{}\", glob_pattern,\nformat_code(&contents, Config\n{\n    sort_requires: SortRequiresConfig\n    { enabled: true, glob: Some(glob_pattern.to_string()) },\n    ..Config::default()\n}, None, OutputVerification::None).unwrap())"
input_file: tests/inputs-sort-requires/sort-services-2.lua
---
glob_pattern: S*
-- Requires should be treated as a separate group to services
local CollectionService = game:GetService("CollectionService")
local ReplicatedStorage = game:GetService("ReplicatedStorage")
local A = require("A")
local C = require("C")
