tests/snapshots/tests__sort_requires_with_glob@variable-case.lua.snap
---
source: tests/tests.rs
expression: "format!(\"glob_pattern: {}\\n{}\", glob_pattern,\nformat_code(&contents, Config\n{\n    sort_requires: SortRequiresConfig\n    { enabled: true, glob: Some(glob_pattern.to_string()) },\n    ..Config::default()\n}, None, OutputVerification::None).unwrap())"
input_file: tests/inputs-sort-requires/variable-case.lua
---
glob_pattern: C*
local Calling = require("../Calling")
local A = require("./A")
local D = require("./D")
local a = require("./a")
local calling = require("../calling")
