tests/snapshots/tests__standard@ambiguous-syntax.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
local baz = foo(bar);
(foo and x or y)(bar)

function foobar()
	local baz = foo(bar);
	(baz and x or y)(bar)
end

